Removed transition on list collapse to fix stream resize

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -129,13 +129,13 @@ body,
 .list-show {
   flex: 0 0 auto;
   height: 190px;
-    transition: all .3s;
+  /*transition: all .3s;*/
 }
 
 .list-hide {
   flex: 0 0 auto;
   height: 0;
-    transition: all .3s;
+  /*transition: all .3s;*/
 }
 
 .search-results {
